; ModuleID = '/home/carl/AnghaBench/lab/engine/code/sdl/extr_sdl_glimp.c_GLimp_MakeCurrent.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/sdl/extr_sdl_glimp.c_GLimp_MakeCurrent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SDL_window = common dso_local global i32 0, align 4
@SDL_glContext = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"GLimp_MakeCurrent - %s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @GLimp_MakeCurrent() #0 {
  %1 = load i32, i32* @SDL_window, align 4
  %2 = load i32, i32* @SDL_glContext, align 4
  %3 = call i64 @SDL_GL_MakeCurrent(i32 %1, i32 %2)
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %8

5:                                                ; preds = %0
  %6 = call i32 (...) @SDL_GetError()
  %7 = call i32 @Sys_Error(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i32 %6)
  br label %8

8:                                                ; preds = %5, %0
  ret void
}

declare dso_local i64 @SDL_GL_MakeCurrent(i32, i32) #1

declare dso_local i32 @Sys_Error(i8*, i32) #1

declare dso_local i32 @SDL_GetError(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
